--- a/assets/demo.css
+++ b/assets/demo.css
@@ -88,7 +88,7 @@ h2 {
     -webkit-border-radius: 30px;
     -moz-border-radius: 30px;
     -ms-border-radius: 30px;
-    border-radius: 30px;
+    border-radius: 70px;
     -webkit-transition: background 0.15s ease;
     -moz-transition: background 0.15s ease;
     -ms-transition: background 0.15s ease;
@@ -121,6 +121,7 @@ h2 {
 
 .btn small {
     font-size: 60%;
+    display: block;
 }
 
 .btn.btn-bottom {
@@ -183,4 +184,61 @@ input[type="submit"] {
     color: #ffffff;
     background: none;
     outline: 0;
+}
+
+.themes {
+    width: 400px;
+    margin: 60px auto 0;
+    display: block;
+    overflow: hidden;
+}
+
+.themes .theme {
+    width: 100px;
+    height: 80px;
+    float: left;
+}
+
+.themes .theme span:last-child {
+    font-size: 12px;
+    margin: 0 auto;
+    cursor: pointer;
+}
+
+.themes .theme span:first-child {
+    border-radius: 100%;
+    position: relative;
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    cursor: pointer;
+    transition: opacity .1s ease;
+}
+
+.themes .theme span:first-child:hover {
+    opacity: 0.8;
+    transition: opacity .1s ease;
+}
+
+.themes .theme--light span:first-child {
+    background: #fafafa;
+    border: 1px solid #d8d8d8;
+}
+
+.themes .theme--legacy-light span:first-child {
+    background: #fff;
+    border: 1px solid #d8d8d8;
+}
+
+.themes .theme--dark span:first-child {
+    background: #4c4c4c;
+    border: 1px solid #404040;
+}
+
+.themes .theme--legacy-dark span:first-child {
+    background: #4c4c4c;
+    border: 1px solid #404040;
 }
